# QuizOfKriging

./: .gitignore  CMakeLists.txt  Kriging.cpp  Kriging.h  MyBbox.h  UsingDeclaration.h  main.cpp
